--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,12 @@ htmlcov/
 .coverage
 .coverage.*
 .cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
 
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow
 __pypackages__/
